# aii-workflow

./: .coverage  .env.example  .gitignore  .pylintrc  API配置说明.md  DeepSeek配置成功报告.md  Dockerfile  FINAL_SOLUTION_GUIDE.md  INSTALLATION_GUIDE.md  README.md  USAGE_GUIDE.md  archive_legacy.py  coverage.xml  demo_e2e.py  docker-compose.yml  efficiency_comparison.md  efficiency_optimization_recommendations.md  harness-progress.txt  harness-tasks.json  harness-tasks.json.bak  mypy.ini  pyproject.toml  requirements.txt  run_full_test_simple.py  simple_gui.py  user_interface.py  ww_enhanced.py  ww_fixed.py  ww_simple.py  一键测试报告.json  优化完成报告.md  启动助手.html  方案C实施进度报告.md  用户使用说明.md  界面使用指南.md  界面演示.py  直接运行.py
.claude/: CLAUDE.md
.trash_backup/: easy_launcher.bat  easy_launcher.py  launcher.bat  quick_launcher.sh  recover_workflow.sh  run_full_test_simple.py  sample_data.csv  systematic_workflow_evaluation.md  test_runner.py
app/: auth.py  config.py  deps.py  main.py  models.py
backup/: QUICK_START.md.backup  ww.bat.backup  ww.py.backup  ww.sh.backup
config/: pipeline_config.json  requirement_schema.json  skills.json  user_prefs.json
core/: __init__.py  agent_caller.py  db.py  debate_engine.py  event_sourced_state.py  heartbeat_checkpoint.py  multi_agent.py  openai_caller.py  orchestrator.py  parallel_executor.py  pipeline_def.py  pipeline_snapshot.py  priority_queue.py  quality_gates.py  retry_policy.py  saga_orchestrator.py  skill_orchestrator.py
demo/: demo_deepseek_simple.py  run_demo.py
docs/: 故障排查手册.md  架构图.md
powershell/: AIIWorkflow.psd1  AIIWorkflow.psm1  (+2 more)
(+140 files in other folders)
